--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -1,9 +1,9 @@
 <header>
     <a href="/">MOVIEMAGIC</a>
 
-    <form action="">
+    <form onsubmit="return false">
         <input type="text" name="txtSearch" id="txtSearch">
-        <input type="button" value="Search" onclick="search()">
+        <input type="submit" value="Search" onclick="search()">
 
     </form>
 </header>
