--- a/views/pages/err404.ejs
+++ b/views/pages/err404.ejs
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <title><%= title %> - Error 404</title>
+    <title>MOVIEMAGIC - Error 404</title>
 </head>
 
 <body>
-    <main>
+    <main class="err404">
         <h1>Error 404</h1>
         <h2>Route '<%= url %>' not found</h2>
+
+        <a class="genre-button" href="javascript:history.back()">BACK</a>
     </main>
 
     <script src="/assets/js/main.js"></script>
