--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -26,9 +26,30 @@ a:visited {
     padding-top: 40vh;
     text-align: center;
 }
-
 .err404 a {
     margin: 2rem;
+}
+
+/****************************************************************************/
+.header {
+    background: #4f4f4f;
+    display: flex;
+    align-items: center;
+    padding: 3vh 10%;
+    gap: 50px;
+}
+.header input {
+    color: #ccc;
+    background: #333;
+    border: none;
+    outline: none;
+    padding: 0.5rem 1rem;
+    border-radius: 2rem;
+}
+.header input[type="submit"] {
+    color: #666;
+    background: #fff;
+    padding: 0.5rem 2rem;
 }
 
 /****************************************************************************/
@@ -40,6 +61,7 @@ a:visited {
 /****************************************************************************/
 .genres {
     text-align: center;
+    margin-top: 3vh;
 }
 
 /****************************************************************************/
@@ -67,6 +89,9 @@ a:visited {
 }
 
 /****************************************************************************/
+.movie-details {
+    padding-top: 2vh;
+}
 .movie-details-image {
     height: 600px;
     border-top-left-radius: 50px;
@@ -80,7 +105,6 @@ a:visited {
 .movie-details-details > div {
     padding: 1rem 0;
 }
-
 .movie-details-details h1 {
     color: #fff;
     font-weight: 600;
@@ -89,12 +113,12 @@ a:visited {
     color: #fff;
     font-weight: 400;
 }
-
 .movie-details-details p {
-    color: #fff;
+    color: #ccc;
     font-weight: 200;
 }
 
+/****************************************************************************/
 .genre-button {
     display: inline-block;
     margin-right: 0.5em;
@@ -106,7 +130,6 @@ a:visited {
 .genre-button:visited {
     color: #ccc;
 }
-
 .genre-button-inactive {
     background-color: #666;
 }
