Function search updated

--- a/views/pages/movie-details.ejs
+++ b/views/pages/movie-details.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <% console.log(details) %>
+    <!-- <% console.log(details) %> -->
 
     <%- include('../includes/header.ejs') %>
     <section class="movie-details">
